# sb_codebreakers

./: Dockerfile  README.md  pyproject.toml  report.md
src/: requirements.txt
src/description/: README.md
src/repository/: README.md
src/sb_codebreakers/: crew.py  main.py
src/sb_codebreakers/config/: agents.yaml  agents_revised.yaml  agents_revised_ru.yaml  agents_ru.yaml  tasks.yaml  tasks_revised.yaml  tasks_revised_ru.yaml  tasks_ru.yaml
src/sb_codebreakers/config/description/: actual_result_file.txt  expected_result_file.txt
src/sb_codebreakers/config/repo/enum/: pom.xml
src/sb_codebreakers/config/repo/enum/src/main/java/sb/codebreakers/: Main.java
src/sb_codebreakers/config/repo/enum/src/main/java/sb/codebreakers/domain/: Month.java
src/sb_codebreakers/db/: chroma.sqlite3
src/sb_codebreakers/litellm_gigachat/: config_gigachat.yaml  custom_gigachat_api.py  readme.md
src/sb_codebreakers/tools/: files_read_tool.py  git_search_tool.py
